Kelsey Development Sandbox/src/objects/DS_TRDETAIL2__c.object
<CustomObject>
    <fields>
        <fullName>T22RFVERB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying form= Verbal bullying</description>
        <label>T22RFVERB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RINJT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Serious injury to Teacher</description>
        <label>T22RINJT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Email</description>
        <label>T22RMCEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Instant Message</description>
        <label>T22RMCIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCOSP__c</fullName>
        <description>Bullying medium= Cyberbullying other Specified</description>
        <label>T22RMCOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RMCOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Other</description>
        <label>T22RMCOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCSO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Social Net.</description>
        <label>T22RMCSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCTX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Text Message</description>
        <label>T22RMCTX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCWB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying Website/blog</description>
        <label>T22RMCWB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMCYB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Cyberbullying</description>
        <label>T22RMCYB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMFCE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Face-to-Face</description>
        <label>T22RMFCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMFCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Face-to-Face Community</description>
        <label>T22RMFCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMFHO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Face-to-Face Home</description>
        <label>T22RMFHO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMFOSP__c</fullName>
        <description>Bullying medium= Face-to-Face Other Specified</description>
        <label>T22RMFOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RMFOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Face-to-Face Other</description>
        <label>T22RMFOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMFSC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Face-to-Face School</description>
        <label>T22RMFSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMOSP__c</fullName>
        <description>Bullying medium= Other Specified</description>
        <label>T22RMOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RMOTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Other</description>
        <label>T22RMOTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RMUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying medium= Unknown</description>
        <label>T22RMUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPERCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying  Perp = Classmate</description>
        <label>T22RPERCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPEROA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying  Perp= Other adult outside of school</description>
        <label>T22RPEROA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPEROSP__c</fullName>
        <description>Bullying Perp = Other Specified</description>
        <label>T22RPEROSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RPEROS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying  Perp = Other school staff</description>
        <label>T22RPEROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPEROT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Perp = Other</description>
        <label>T22RPEROT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying  Perp = Other Youth</description>
        <label>T22RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RPERTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying  Perp = Teacher</description>
        <label>T22RPERTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESDB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason =  Disability</description>
        <label>T22RRESDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESEC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason = Socio-economic</description>
        <label>T22RRESEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESOS__c</fullName>
        <description>Bullying Reason = Other Spec</description>
        <label>T22RRESOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RRESO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason = Other</description>
        <label>T22RRESO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESRC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason = Race</description>
        <label>T22RRESRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESRE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason = Religion</description>
        <label>T22RRESRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESSO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason =  Sexual Orientation</description>
        <label>T22RRESSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRESWT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying Reason = Weight</description>
        <label>T22RRESWT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RRES__c</fullName>
        <description>Bullying Reason</description>
        <label>T22RRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS TRDETAIL2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRDETAIL2-{000000}</displayFormat>
        <label>DS TRDETAIL2 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS TRDETAIL2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TRBEREAVE_must_specify_cause_of_death</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T15RDO__c = true &amp;&amp; ISBLANK(T15RDOSP__c)</errorConditionFormula>
        <errorDisplayField>T15RDOSP__c</errorDisplayField>
        <errorMessage>Please specify the cause of death.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_indicate_how_cyber</fullName>
        <active>true</active>
        <description>If &quot;Cyberbullying,&quot; must specify how the bullying took place by choosing one of the following:</description>
        <errorConditionFormula>T22RMCYB__c = true &amp;&amp; AND(T22RMCSO__c = false,T22RMCTX__c = false, T22RMCIM__c = false, T22RMCEM__c = false, T22RMCWB__c = false, T22RMCOT__c = false)</errorConditionFormula>
        <errorDisplayField>T22RMCYB__c</errorDisplayField>
        <errorMessage>Please indicate how the cyber bullying occurred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_indicate_reason</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T22RRES, must specify reason for targeting by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T22RRES__c, &apos;1&apos;) &amp;&amp; AND(T22RRESRC__c = false, T22RRESRE__c = false, T22RRESSO__c = false, T22RRESDB__c = false, T22RRESWT__c = false, T22RRESEC__c = false, T22RRESO__c = false)</errorConditionFormula>
        <errorDisplayField>T22RRES__c</errorDisplayField>
        <errorMessage>Please indicate the reason the victim was targeted for bullying.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_indicate_setting_face</fullName>
        <active>true</active>
        <description>If &quot;Face-fo-face,&quot; must specify where the bullying took place by choosing one of the following:</description>
        <errorConditionFormula>T22RMFCE__c = true &amp;&amp; AND(T22RMFHO__c = false,T22RMFSC__c = false, T22RMFCO__c = false, T22RMFOT__c = false)</errorConditionFormula>
        <errorDisplayField>T22RMFCE__c</errorDisplayField>
        <errorMessage>Please indicate where the face-to-face bullying occurred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T22RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T22RINJ__c, &apos;1&apos;) &amp;&amp; AND(T22RINJC__c = false, T22RINJT__c = false, T22RINJSB__c = false, T22RINJOY__c = false, T22RINJO__c = false)</errorConditionFormula>
        <errorDisplayField>T22RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RINJO__c = true &amp;&amp; ISBLANK(T22RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T22RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_medium</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RMOTR__c = true &amp;&amp; ISBLANK(T22RMOSP__c)</errorConditionFormula>
        <errorDisplayField>T22RMOSP__c</errorDisplayField>
        <errorMessage>Please specify the medium through which the bullying occurred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_medium_cyber</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RMCOT__c = true &amp;&amp; ISBLANK(T22RMCOSP__c)</errorConditionFormula>
        <errorDisplayField>T22RMCOSP__c</errorDisplayField>
        <errorMessage>Please specify the medium through which the cyber bullying occurred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_medium_face</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RMFOT__c = true &amp;&amp; ISBLANK(T22RMFOSP__c)</errorConditionFormula>
        <errorDisplayField>T22RMFOSP__c</errorDisplayField>
        <errorMessage>Please specify the medium through which the face-to-face bullying occurred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_perpetrator</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RPEROT__c = true &amp;&amp; ISBLANK(T22RPEROSP__c)</errorConditionFormula>
        <errorDisplayField>T22RPEROSP__c</errorDisplayField>
        <errorMessage>Please specify the perpetrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_reason_targeted</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RRESO__c = true &amp;&amp; ISBLANK(T22RRESOS__c)</errorConditionFormula>
        <errorDisplayField>T22RRESOS__c</errorDisplayField>
        <errorMessage>Please specify the reason targeted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRBULLYING_must_specify_type_bully</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T22RFOTR__c = true &amp;&amp; ISBLANK(T22RFOSP__c)</errorConditionFormula>
        <errorDisplayField>T22RFOSP__c</errorDisplayField>
        <errorMessage>Please specify the type of bullying</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMVIO_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T20RINJ, must specify &quot;whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T20RINJ__c, &apos;1&apos;) &amp;&amp; AND(T20RINJC__c = false, T20RINJP__c = false, T20RINJAR__c = false, T20RINJUA__c = false, T20RINJSB__c = false, T20RINJOY__c = false, T20RINJO__c = false)</errorConditionFormula>
        <errorDisplayField>T20RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMVIO_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T20RSETO__c = true &amp;&amp; ISBLANK(T20RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T20RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMVIO_must_specify_to_whom_injury</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T20RINJO__c = true &amp;&amp; ISBLANK(T20RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T20RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRDISPLACE_must_specify_reason</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T17RREO__c = true &amp;&amp; ISBLANK(T17RREOS__c)</errorConditionFormula>
        <errorDisplayField>T17RREOS__c</errorDisplayField>
        <errorMessage>Please specify the reason for the forced displacement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMPCARE_must_specify_caregiver</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T18RCGO__c = true &amp;&amp; ISBLANK(T18RCGOSP__c)</errorConditionFormula>
        <errorDisplayField>T18RCGOSP__c</errorDisplayField>
        <errorMessage>Please specify the impaired caregiver</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMPCARE_must_specify_impairment_cause</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T18RIMPO__c = true &amp;&amp; ISBLANK(T18RIMPOSP__c)</errorConditionFormula>
        <errorDisplayField>T18RIMPOSP__c</errorDisplayField>
        <errorMessage>Please specify what the impairment was due to</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRKIDNAP_must_specify_other_circumstance</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T14RINCO__c = true &amp;&amp;ISBLANK(T14RINCOS__c)</errorConditionFormula>
        <errorDisplayField>T14RINCOS__c</errorDisplayField>
        <errorMessage>Please specify the other circumstance the kidnapping/abduction included.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSCHOOLVIO_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T21RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T21RINJ__c, &apos;1&apos;) &amp;&amp; AND(T21RINJC__c = false, T21RINJT__c = false, T21RINJSB__c = false, T21RINJOY__c = false, T21RINJO__c = false)</errorConditionFormula>
        <errorDisplayField>T21RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSCHOOLVIO_must_specify_to_whom_injury</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T21RINJO__c = true &amp;&amp; ISBLANK(T21RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T21RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSCHOOLVIO_must_specify_type_violence</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T21RCOTH__c = true &amp;&amp; ISBLANK(T21RCOSP__c)</errorConditionFormula>
        <errorDisplayField>T21RCOSP__c</errorDisplayField>
        <errorMessage>Please specify the type of violence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEPARATE_must_indicate_circumstances_C</fullName>
        <active>true</active>
        <description>If &quot;Child,&quot; must describe the reason for removal by choosing one of the following:</description>
        <errorConditionFormula>T16RCC__c = true &amp;&amp; AND(T16RCCFC__c = false, T16RCCRS__c = false, T16RCCCM__c = false, T16RCCIN__c = false, T16RCCHP__c = false, T16RCCO__c = false, T16RCCUK__c = false)</errorConditionFormula>
        <errorDisplayField>T16RCC__c</errorDisplayField>
        <errorMessage>Please indicate the reason why the child was removed from the home.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEPARATE_must_indicate_circumstances_P</fullName>
        <active>true</active>
        <description>If &quot;Parent,&quot; must describe the reason for removal by choosing one of the following:</description>
        <errorConditionFormula>T16RCP__c = true &amp;&amp; AND(T16RCPD__c = false, T16RCPCM__c = false, T16RCPIN__c = false, T16RCPHP__c = false, T16RCPW__c = false, T16RCPM__c = false, T16RCPT__c = false, T16RCPO__c = false, T16RCPUK__c = false)</errorConditionFormula>
        <errorDisplayField>T16RCP__c</errorDisplayField>
        <errorMessage>Please indicate the reason why the parent/caretaker was removed from the home.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEPARATE_must_specify_circumstance</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T16RCO__c = true &amp;&amp; ISBLANK(T16RCOS__c)</errorConditionFormula>
        <errorDisplayField>T16RCOS__c</errorDisplayField>
        <errorMessage>Please specify the circumstance of the separation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEPARATE_must_specify_circumstance_C</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T16RCCO__c = true &amp;&amp; ISBLANK(T16RCCOS__c)</errorConditionFormula>
        <errorDisplayField>T16RCCOS__c</errorDisplayField>
        <errorMessage>Please specify the circumstance of the separation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEPARATE_must_specify_circumstance_P</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T16RCPO__c = true &amp;&amp; ISBLANK(T16RCPOS__c)</errorConditionFormula>
        <errorDisplayField>T16RCPOS__c</errorDisplayField>
        <errorMessage>Please specify the circumstance of the separation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRVIOLENCE_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T19RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T19RINJ__c, &apos;1&apos;) &amp;&amp; AND(T19RINJC__c = false, T19RINJP__c = false, T19RINJAR__c = false, T19RINJUA__c = false, T19RINJSB__c = false, T19RINJOY__c = false, T19RINJO__c = false)</errorConditionFormula>
        <errorDisplayField>T19RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRVIOLENCE_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T19RSETO__c = true &amp;&amp; ISBLANK(T19RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T19RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRVIOLENCE_must_specify_to_whom_injury</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T19RINJO__c = true &amp;&amp; ISBLANK(T19RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T19RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRVIOLENCE_must_specify_type_violence</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T19ROTH__c = true &amp;&amp; ISBLANK(T19ROTHS__c)</errorConditionFormula>
        <errorDisplayField>T19ROTHS__c</errorDisplayField>
        <errorMessage>Please specify the type of violence</errorMessage>
    </validationRules>
</CustomObject>